# smash-karts-chat

./: .gitignore  Readme.md  privacy-policy.md  stress-test-report.md
extension/: background.js  content.js  interceptor.js  manifest.json  styles.css
load-test/: index.js  package-lock.json  package.json  reporter.js
scripts/: package-extension.mjs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
server/src/: main.rs
